--- a/Clusters/production/stack-3rd/csdn-elasticsearch.yaml
+++ b/Clusters/production/stack-3rd/csdn-elasticsearch.yaml
@@ -1,15 +1,15 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: elasticsearch
-  namespace: flux-system
-spec:
-  interval: 1m
-  chart: 
-    spec:
-      chart: elasticsearch
-      version: '1.0.0'
-      sourceRef:
-        kind: HelmRepository
-        name: chartmuseum-csdn
-  targetNamespace: csdn-demo
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: elasticsearch
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   chart: 
+#     spec:
+#       chart: elasticsearch
+#       version: '1.0.0'
+#       sourceRef:
+#         kind: HelmRepository
+#         name: chartmuseum-csdn
+#   targetNamespace: csdn-demo
