--- a/Clusters/production/stack-3rd/csdn-activemq.yaml
+++ b/Clusters/production/stack-3rd/csdn-activemq.yaml
@@ -1,15 +1,15 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: activemq
-  namespace: flux-system
-spec:
-  interval: 1m
-  chart: 
-    spec:
-      chart: activemq
-      version: '1.0.0'
-      sourceRef:
-        kind: HelmRepository
-        name: chartmuseum-csdn
-  targetNamespace: csdn-demo
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: activemq
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   chart: 
+#     spec:
+#       chart: activemq
+#       version: '1.0.0'
+#       sourceRef:
+#         kind: HelmRepository
+#         name: chartmuseum-csdn
+#   targetNamespace: csdn-demo
